# SecureFlow-AI

./: .env.example  .gitignore  .gitleaksignore  .secureflow.yml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  demo_smoke.tf  pyproject.toml  requirements.txt
.github/workflows/: dogfood.yml  eval.yml  secureflow.yml  tests.yml
design/: 01_llm_stack.md  02_orchestrator.md  03_patch_validation.md  04_evaluation_harness.md  05_schemas_and_finding_ids.md  06_sensitive_detection_and_reachability.md  README.md
docs/: DESIGN.md
examples/configs/: secureflow.gemini.patch.yml  secureflow.ollama.js.yml  secureflow.ollama.patch.yml  secureflow.ollama.yml
reports/: eval_full.json  eval_full.md  eval_scanners_only.json  eval_scanners_only.md  eval_versions.yaml
secureflow/: __init__.py  cli.py  config.py
secureflow/agents/: __init__.py  ai_discovery_agent.py  context_agent.py  decision_agent.py  dependency_agent.py  enrichment_agent.py  exploitability_agent.py  iac_agent.py  normalizer.py  patch_agent.py  reachability_agent.py  sast_agent.py  secrets_agent.py  threat_mapping_agent.py  threat_model_agent.py
secureflow/analysis/: __init__.py  ast_signals.py  path_rules.py
secureflow/enrichment/: __init__.py  cache.py  cvss.py  mitre_mapper.py  nvd_client.py  osv_client.py
secureflow/eval/: __init__.py  cli.py  label_aliases.yaml  loader.py  matcher.py  metrics.py  report.py  runner.py  schema.py
secureflow/llm/: __init__.py  _json_repair.py  base.py  budget.py  cache.py  chain_client.py  deepseek_client.py  factory.py  gemini_client.py  groq_client.py  ollama_client.py  openrouter_client.py  registry.py
secureflow/llm/prompts/: __init__.py
secureflow/llm/prompts/patch/: v1.yaml  (+2 more)
secureflow/orchestrator/: __init__.py  conditions.py  errors.py  graph.py  patch_loop.py
secureflow/policy/: __init__.py  default_policy.py  policy_engine.py
secureflow/reporting/: __init__.py  json_report.py  markdown_report.py  sarif_report.py  telemetry.py
secureflow/schemas/: __init__.py  decision.py  finding.py  ids.py  llm_outputs.py  pr_context.py  state.py
secureflow/tools/: __init__.py  checkov_runner.py  git_diff.py  github_api.py  gitleaks_runner.py  grype_runner.py  manifest_parser.py  rescan.py  semgrep_runner.py  syft_runner.py
secureflow/utils/: __init__.py  logging.py  secret_masker.py  subprocess_utils.py  timing.py
tests/fixtures/scenario_01_hardcoded_secret/: config.py  expected.yaml
tests/fixtures/scenario_02_missing_authz/: app.py  expected.yaml
tests/fixtures/scenario_03_vulnerable_dep/: expected.yaml  requirements.txt
tests/fixtures/scenario_04_sqli_diff/: expected.yaml  vulnerable.py
tests/fixtures/scenario_05_command_injection/: expected.yaml  vulnerable.py
tests/unit/: test_agent_file_reader_security.py  test_ast_signals.py  test_ast_signals_xlang.py  test_chain_client.py  test_ci_glue.py  test_cvss.py  test_dependency_triage.py  test_diff_line_filter.py  test_eval_matcher.py  test_eval_metrics.py  test_exploitability_agent.py  test_finding_ids.py  test_gemini_failover.py  test_gemini_patch_schema.py  test_github_api.py  test_groq_client.py  test_grype_transitive_filter.py  test_markdown_banner.py  test_matcher_secondary.py  test_model_helpers.py  test_normalizer_dedup.py  test_ollama_client.py  test_openrouter_client.py  test_orchestrator_e2e.py  test_orchestrator_graph.py  test_patch_agent.py  test_policy.py  test_policy_profiles.py  test_secret_masker.py  test_taint_floor.py  test_telemetry.py
(+76 files in other folders)
